--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
 # Created by https://www.toptal.com/developers/gitignore/api/terraform,ansible
 # Edit at https://www.toptal.com/developers/gitignore?templates=terraform,ansible
 
+### VisualStudioCode ###
+.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
 ### Ansible ###
 *.retry
 
