--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,7 @@ override.tf.json
 .terraformrc
 terraform.rc
 
+# Ignore Terraform lock file
+terraform.lock.hcl
+
 # End of https://www.toptal.com/developers/gitignore/api/terraform,ansible
