--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,6 @@ override.tf.json
 terraform.rc
 
 # Ignore Terraform lock file
-terraform.lock.hcl
+.terraform.lock.hcl
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform,ansible
