--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -1,5 +1,85 @@
 ---
 # tasks file for docker
-- name: Print a debug message
-  ansible.builtin.debug:
-    msg: "Hello from docker role!"
+- name: Install docker dependencies
+  ansible.builtin.apt:
+    name: "{{ docker_requirements_list }}"
+    state: present
+    update_cache: true
+    cache_valid_time: 120
+
+- name: Set proper permissions for /etc/apt/keyrings
+  ansible.builtin.file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: "0755"
+
+- name: Add docker gpg key
+  ansible.builtin.get_url:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    dest: /etc/apt/keyrings/docker.asc
+    mode: '0644'
+    force: true
+
+- name: Add the docker repository to apt sources
+  ansible.builtin.apt_repository:
+    filename: docker
+    repo: "deb \
+      [signed-by=/etc/apt/keyrings/docker.asc] \
+      https://download.docker.com/linux/ubuntu \
+      {{ ansible_lsb['codename'] }} stable"
+    update_cache: true
+
+# Install Docker packages
+- name: Install docker packages
+  ansible.builtin.apt:
+    name: "{{ docker_package_list }}"
+    state: present
+    update_cache: true
+    cache_valid_time: 120
+
+
+# Post installation steps
+
+- name: Create the docker group
+  ansible.builtin.group:
+    name: docker
+    gid: 1001
+    state: present
+
+# ensure docker user exists and add to docker group
+- name: Create the docker user
+  ansible.builtin.user:
+    name: docker
+    password: "*"
+    uid: 1001
+    create_home: false
+    shell: /usr/sbin/nologin
+    group: docker
+    groups: docker
+    append: true
+
+- name: Add non root user to docker group
+  ansible.builtin.user:
+    name: janek
+    groups: docker
+    append: true
+
+- name: Enable the docker service
+  ansible.builtin.service:
+    name: docker
+    enabled: true
+
+- name: Enable the containerd service
+  ansible.builtin.service:
+    name: containerd
+    enabled: true
+
+# Configure default logging driver
+- name: Copy docker daemon config
+  ansible.builtin.copy:
+    src: files/daemon.json
+    dest: /etc/docker/daemon.json
+    owner: root
+    group: root
+    mode: 0644
+  notify: Restart docker service
