--- a/ansible/roles/docker/vars/main.yml
+++ b/ansible/roles/docker/vars/main.yml
@@ -1,2 +1,13 @@
 ---
 # vars file for docker
+docker_requirements_list:
+  - ca-certificates
+  - curl
+  - gnupg
+
+docker_package_list:
+  - docker-ce
+  - docker-ce-cli
+  - containerd.io
+  - docker-buildx-plugin
+  - docker-compose-plugin
