--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -29,53 +29,12 @@
     user: janek
     state: present
 
-- name: Enable ssh public key authentication
+- name: Harden ssh configuration
   ansible.builtin.lineinfile:
     path: /etc/ssh/sshd_config
-    regexp: "^PubkeyAuthentication "
-    line: "PubkeyAuthentication yes"
-  notify: Restart ssh
-
-- name: Disable ssh password authentication
-  ansible.builtin.lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^PasswordAuthentication "
-    line: "PasswordAuthentication no"
-  notify: Restart ssh
-
-- name: Disable ssh host based authentication
-  ansible.builtin.lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^HostBasedAuthentication "
-    line: "HostBasedAuthentication no"
-  notify: Restart ssh
-
-- name: Disable ssh PAM authentication
-  ansible.builtin.lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^UsePAM "
-    line: "UsePAM no"
-  notify: Restart ssh
-
-- name: Disable ssh root login
-  ansible.builtin.lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^PermitRootLogin "
-    line: "PermitRootLogin no"
-  notify: Restart ssh
-
-- name: Set ssh max authentication attempts
-  ansible.builtin.lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^MaxAuthTries "
-    line: "MaxAuthTries 4"
-  notify: Restart ssh
-
-- name: Disallow ssh user environments
-  ansible.builtin.lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^PermitUserEnvironment "
-    line: "PermitUserEnvironment no"
+    regexp: "^{{ item.name }} "
+    line: "{{ item.name }} {{ item.value }}"
+  loop: "{{ common_ssh_conf_list }}"
   notify: Restart ssh
 
 - name: Install packages
