point nginx to ssl certs for my site's domain

--- a/ansible/roles/webserver/files/default.conf
+++ b/ansible/roles/webserver/files/default.conf
@@ -5,7 +5,7 @@ server {
     access_log /var/log/nginx/access.log;
 
     location / {
-        return 301 https://test.jzarzycki.com;
+        return 301 https://www.jzarzycki.com;
     }
 }
 
@@ -15,8 +15,8 @@ server {
     server_name test.jzarzycki.com;
     access_log /var/log/nginx/access.log;
 
-    ssl_certificate     /etc/letsencrypt/archive/test.jzarzycki.com/fullchain1.pem;
-    ssl_certificate_key /etc/letsencrypt/archive/test.jzarzycki.com/privkey1.pem;
+    ssl_certificate     /etc/letsencrypt/archive/jzarzycki.com/fullchain21.pem;
+    ssl_certificate_key /etc/letsencrypt/archive/jzarzycki.com/privkey21.pem;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
