--- a/ansible/roles/webserver/tasks/main.yml
+++ b/ansible/roles/webserver/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 # tasks file for webserver
+# TODO: add swap file
 # TODO: generate or renew ssl certs
+# TODO: add crontab for renewing ssl certs automatically
 
 - name: Allow http & https access in ufw
   community.general.ufw:
