correct nginx config url

--- a/ansible/roles/webserver/files/default.conf
+++ b/ansible/roles/webserver/files/default.conf
@@ -1,7 +1,7 @@
 server {
 	listen 80;
 	listen [::]:80;
-    server_name test.jzarzycki.com;
+    server_name www.jzarzycki.com;
     access_log /var/log/nginx/access.log;
 
     location / {
@@ -12,7 +12,7 @@ server {
 server {
     listen 443 ssl default_server;
 	listen [::]:443 ssl default_server;
-    server_name test.jzarzycki.com;
+    server_name www.jzarzycki.com;
     access_log /var/log/nginx/access.log;
 
     ssl_certificate     /etc/letsencrypt/archive/jzarzycki.com/fullchain21.pem;
