correct nginx ssl config to use symlinks

--- a/ansible/roles/webserver/files/default.conf
+++ b/ansible/roles/webserver/files/default.conf
@@ -15,8 +15,8 @@ server {
     server_name www.jzarzycki.com;
     access_log /var/log/nginx/access.log;
 
-    ssl_certificate     /etc/letsencrypt/archive/jzarzycki.com/fullchain21.pem;
-    ssl_certificate_key /etc/letsencrypt/archive/jzarzycki.com/privkey21.pem;
+    ssl_certificate     /etc/letsencrypt/live/jzarzycki.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jzarzycki.com/privkey.pem;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
