--- a/ansible/roles/webserver/files/default.conf
+++ b/ansible/roles/webserver/files/default.conf
@@ -17,7 +17,7 @@ server {
 
     ssl_certificate     /etc/letsencrypt/live/jzarzycki.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/jzarzycki.com/privkey.pem;
-    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     location / {
