--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,2 +1,3 @@
-do_token             = "abcd12345abcd12345"
-ssh_public_key_path  = "~/.ssh/ssh_key.pub"
+do_token              = "abcd12345abcd12345"
+ssh_public_key_path   = "~/.ssh/ssh_key.pub"
+ssh_private_key_path  = "~/.ssh/ssh_key"
