configure swap file

--- a/ansible/roles/common/vars/main.yml
+++ b/ansible/roles/common/vars/main.yml
@@ -13,3 +13,6 @@ common_ssh_conf_list:
   - { name: "PermitRootLogin", value: "no" }
   - { name: "MaxAuthTries", value: "4" }
   - { name: "PermitUserEnvironment", value: "no" }
+
+swap_file_path: "/swapfile"
+swap_file_size: "1G"
