--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -58,3 +58,47 @@
     rule: allow
     port: ssh
     state: enabled
+
+- name: Ensure that persistent volume dir exists
+  ansible.builtin.file:
+    name: /mnt/vol1
+    state: directory
+
+- name: Mount persistent volume
+  ansible.posix.mount:
+    path: /mnt/vol1
+    src: /dev/disk/by-id/scsi-0DO_Volume_vol1
+    fstype: ext4
+    opts: discard,defaults,noatime
+    state: mounted
+
+- name: Create the swap file
+  community.general.filesize:
+    path: "{{ swap_file_path }}"
+    size: "{{ swap_file_size }}"
+  register: swap_file_create
+
+- name: Set permissions on swap file
+  ansible.builtin.file:
+    path: "{{ swap_file_path }}"
+    owner: root
+    group: root
+    mode: "0600"
+
+- name: Make swap file if necessary.
+  ansible.builtin.command: mkswap {{ swap_file_path }}
+  when: swap_file_create is changed
+  register: mkswap_result
+
+- name: Run swapon on the swap file.
+  ansible.builtin.command: swapon {{ swap_file_path }}
+  when:
+    - mkswap_result is changed
+
+- name: Add fstab entry for swap file
+  ansible.posix.mount:
+    path: none
+    src: /swapfile
+    fstype: swap
+    opts: sw
+    state: present # Ansible does not currently allow to use mounted with swap
