add dependency on wordpress to nginx container

--- a/ansible/roles/webserver/files/docker-compose.yml
+++ b/ansible/roles/webserver/files/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   # Reverse Proxy
   web:
     image: nginx
+    depends_on:
+      - wordpress
     ports:
       - "80:80"
       - "443:443"
