--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -7,6 +7,10 @@
     state: present
     update_cache: true
     cache_valid_time: 120
+  register: result
+  until: result is successful
+  retries: 12
+  delay: 5
 
 - name: Set proper permissions for /etc/apt/keyrings
   ansible.builtin.file:
@@ -28,25 +32,28 @@
       [signed-by=/etc/apt/keyrings/docker.asc] \
       https://download.docker.com/linux/ubuntu \
       {{ ansible_lsb['codename'] }} stable"
-    update_cache: true
+  register: result
+  until: result is successful
+  retries: 12
+  delay: 5
 
-# Install Docker packages
 - name: Install docker packages
   ansible.builtin.apt:
     name: "{{ docker_package_list }}"
     state: present
     update_cache: true
-    cache_valid_time: 120
+  register: result
+  until: result is successful
+  retries: 12
+  delay: 5
 
 # Post installation steps
-
 - name: Create the docker group
   ansible.builtin.group:
     name: docker
     gid: 1001
     state: present
 
-# ensure docker user exists and add to docker group
 - name: Create the docker user
   ansible.builtin.user:
     name: docker
