--- a/ansible/roles/common/vars/main.yml
+++ b/ansible/roles/common/vars/main.yml
@@ -1,10 +1,24 @@
 ---
 # vars file for common
+# User
+common_user_name: janek
+common_user_group: janek
+common_uid: 1000
+common_gid: 1000
+
+# Volume
+common_volume_name: wordpress_data
+common_volume_path: /mnt/wordpress_data
+common_volume_fstype: ext4
+
+# Packages
 common_package_list:
   - aptitude
   - vim
   - python3
 
+# ssh
+common_ssh_pubkey_path: ~/.ssh/terraform.pub
 common_ssh_conf_list:
   - { name: "PubkeyAuthentication", value: "yes" }
   - { name: "PasswordAuthentication", value: "no" }
@@ -16,5 +30,6 @@ common_ssh_conf_list:
   - { name: "AllowUsers", value: "janek" }
   - { name: "Protocol", value: "2" }
 
+# swap
 common_swap_file_path: "/swapfile"
 common_swap_file_size: "1G"
