--- a/ansible/roles/docker/defaults/main.yml
+++ b/ansible/roles/docker/defaults/main.yml
@@ -1,2 +1,17 @@
 ---
 # defaults file for docker
+docker_requirements_list:
+  - ca-certificates
+  - curl
+  - gnupg
+
+docker_package_list:
+  - docker-ce
+  - docker-ce-cli
+  - containerd.io
+  - docker-buildx-plugin
+  - docker-compose-plugin
+
+docker_services:
+  - docker
+  - containerd
