override default email

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -10,3 +10,4 @@
     - role: docker
     - role: webserver
       webserver_website_url: www.jzarzycki.com
+      webserver_email: jzarzycki97@gmail.com
