--- a/ansible/roles/webserver/files/.env.example
+++ b/ansible/roles/webserver/files/.env.example
@@ -1,8 +1,8 @@
 # MySQL
-MYSQL_ROOT_PASSWORD = "some_password"
-MYSQL_DATABASE = "some_name"
-MYSQL_USER = "some_user"
-MYSQL_PASSWORD = "some_password"
+MYSQL_ROOT_PASSWORD = "$MYSQL_ROOT_PASSWORD"
+MYSQL_DATABASE = "$MYSQL_DATABASE"
+MYSQL_USER = "$MYSQL_USER"
+MYSQL_PASSWORD = "$MYSQL_PASSWORD"
 
 # Wordpress
 WORDPRESS_DB_HOST = "db"
