ansible: fix self signed cert job

--- a/ansible/roles/webserver/tasks/main.yml
+++ b/ansible/roles/webserver/tasks/main.yml
@@ -66,11 +66,23 @@
     creates: "{{ webserver_persistent_volume }}/letsencrypt/live/{{ webserver_website_url }}/"
   when: webserver_cert_type == "certbot"
 
+- name: Create directory for self signed certificate
+  ansible.builtin.file:
+    name: "{{ webserver_persistent_volume }}/letsencrypt/live/{{ webserver_website_url }}/"
+    state: directory
+  when: webserver_cert_type == "self_signed"
+
+- name: Create SSL self-signed cert config file
+  ansible.builtin.template:
+    src: openssl.conf.j2
+    dest: "{{ webserver_persistent_volume }}/openssl.conf"
+  when: webserver_cert_type == "self_signed"
+
 - name: Create SSL self-signed certificate
   ansible.builtin.command:
     argv: "{{ webserver_ssl_self_signed_job }}"
   args:
-    creates: "{{ webserver_persistent_volume }}/letsencrypt/live/{{ webserver_website_url }}/"
+    creates: "{{ webserver_persistent_volume }}/letsencrypt/live/{{ webserver_website_url }}/{fullchain,privkey}.pem"
   when: webserver_cert_type == "self_signed"
 
 - name: Create webroot directory for certificate renewal
